--- a/desafios/desafio012/estilo/style.css
+++ b/desafios/desafio012/estilo/style.css
@@ -1,5 +1,37 @@
 @charset "UTF-8";
 
+
+* {
+    margin:0px;
+    padding: 0px;
+}
+
+html, body{
+    min-height: 100vh;
+    background-color: antiquewhite;
+}
+
+header{
+    background-color: black;
+    color: white;
+    text-align: center;
+}
+
+header > h1{
+    padding-top: 50px;
+    color: white;
+    text-align: center;
+    margin: auto;
+    font-variant: small-caps;
+   
+}
+
+header > p{
+    color: white;
+    margin: auto;
+    padding: 0px;
+    margin: 0px;
+}
 @font-face {
     font-family: 'Cookie', cursive;
     src: url('https://fonts.googleapis.com/css2?family=Cookie&family=Roboto+Mono:wght@600&family=Ubuntu&display=swap') ;
@@ -10,7 +42,3 @@
     src: url('https://fonts.googleapis.com/css2?family=Cookie&family=Roboto+Mono:wght@600&family=Ubuntu&display=swap');
 }
 
-body{
-    background-color: white;
-    font-family: ;
-}
