--- a/desafios/desafio012/estilo/style.css
+++ b/desafios/desafio012/estilo/style.css
@@ -1,14 +1,28 @@
 @charset "UTF-8";
 
+@import url('https://fonts.googleapis.com/css2?family=Squada+One&display=swap');
 
+@font-face {
+    font-family: 'Cordelina';
+    src: url('cordelina.otf') format('opentype');
+    font-weight: normal;
+}
+
+:root{
+    --fonte1:Verdana, Geneva, Tahoma, sans-serif;
+    --fonte2:'Squada One', cursive;
+    --fonte3: 'Cordelina';
+}
 * {
     margin:0px;
     padding: 0px;
+    font-size: 1em;
 }
 
 html, body{
     min-height: 100vh;
     background-color: antiquewhite;
+    font-family: var(--fonte2);
 }
 
 header{
@@ -23,14 +37,17 @@ header > h1{
     text-align: center;
     margin: auto;
     font-variant: small-caps;
-   
+    font-family: var(--fonte3);
+    font-size: 10vw;
 }
 
-header > p{
+header > p {
     color: white;
     margin: auto;
     padding-bottom: 50px;
     margin: 0px;
+    font-family: var(--fonte1);
+    font-size: 1.5vw;
 }
 
 header a, footer a {
@@ -44,8 +61,11 @@ a:hover{
 section{
     padding-top: 10vh;
     padding-bottom: 10vh;
-    line-height: 2em;
-    padding-left: 30px;
+    line-height: 1.5em;
+    padding-left: 50px;
+    font-family: var(--fonte3);
+    font-size: 3.5vw;
+    
 }
 
 section.normal {
@@ -58,8 +78,9 @@ section.imagem{
 }
 
 section.imagem > p{
+    display: inline-block;
+    padding: 10px;
     background-color: rgba(0, 0, 0, 0.219);
-    width: 400px;
 }
 
 footer{
@@ -68,10 +89,7 @@ footer{
     text-align: center;
     padding: 10px;
 }
-@font-face {
-    font-family: 'Cookie', cursive;
-    src: url('https://fonts.googleapis.com/css2?family=Cookie&family=Roboto+Mono:wght@600&family=Ubuntu&display=swap') ;
-    font-weight: normal;
+
 }
 @font-face {
     font-family:'Roboto Mono', monospace;
